<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent" 
        android:overScrollMode="always" 
        android:fadeScrollbars="false"
        android:isScrollContainer="true" 
        android:scrollbarAlwaysDrawVerticalTrack="true" 
        android:scrollbarStyle="outsideInset" 
        android:scrollbars="vertical">

	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >

   	    <TableRow
   	        android:layout_width="match_parent"
   	        android:layout_height="wrap_content"
   	        android:background="#FF555555"
   	        android:layout_marginBottom="10dp"
   	        android:paddingBottom="3dp"
   	        android:paddingTop="3dp" >

   	        <TextView
   	            android:layout_width="fill_parent"
   	            android:layout_height="wrap_content"
   	            android:layout_marginLeft="10dp"
   	            android:text="@string/H2_Product"
   	            android:textColor="#FFFFFF"
   	            android:textSize="14sp" />

   	    </TableRow>

	    <TableRow

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" >
	        
					<ImageView 
					android:id="@+id/imageView1" 
					android:layout_height="wrap_content" 
					android:layout_width="wrap_content"
					android:src="@drawable/coming_soon"
					></ImageView>
					
					<ImageView
					    android:id="@+id/imageView2"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:src="@drawable/coming_soon" >
					</ImageView>
	            
	        </TableRow>
	
	        <TableRow

	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	
	            <TextView
	                android:id="@+id/textView1_lb"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textStyle="bold"
	                android:textSize="10sp" 
	                android:layout_marginRight="4dp"
	                android:text="@string/lb_gtin" />
	          
	            <TextView
	                android:id="@+id/textView1"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content" />
	
	        </TableRow>

	        <TableRow

	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	
	            <TextView
	                android:id="@+id/textView6_lb"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textStyle="bold"
	                android:textSize="10sp" 
	                android:layout_marginRight="4dp"
	                android:text="@string/lb_gcp" />
	          
	            <TextView
	                android:id="@+id/textView6"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content" />
	
	        </TableRow>
	
	        	
	        <TableRow

	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	       
	            <TextView
	                android:id="@+id/textView2_lb"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	               	android:textStyle="bold"
	                android:textSize="10sp" 
	                android:layout_marginRight="4dp"
	                android:text="@string/lb_gtin_nm"
	                />
	          
	            <TextView
	                android:id="@+id/textView2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content" />
	        
	        </TableRow>

	        <TableRow

	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	
	            <TextView
	                android:id="@+id/textView7_lb"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textStyle="bold"
	                android:textSize="10sp" 
	                android:layout_marginRight="4dp"
	                android:text="@string/lb_gtin_ct" />
	          
	            <TextView
	                android:id="@+id/textView7"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content" />
	
	        </TableRow>
	
	        <TableRow
	            
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	       
	            <TextView
	                android:id="@+id/textView3_lb"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	               	android:textStyle="bold"
	                android:textSize="10sp" 
	              	android:layout_marginRight="4dp"
	                android:text="@string/lb_brand_nm" />
	          
	            <TextView
	                android:id="@+id/textView3"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content" />
	        
	        </TableRow>
	        

	        
   	    <TableRow
   	        android:layout_width="match_parent"
   	        android:layout_height="wrap_content"
   	        android:background="#FF555555"
   	        android:layout_marginTop="10dp"
   	        android:layout_marginBottom="10dp"
   	        android:paddingBottom="3dp"
   	        android:paddingTop="3dp" >

   	        <TextView
   	            android:layout_width="fill_parent"
   	            android:layout_height="wrap_content"
   	            android:layout_marginLeft="10dp"
   	            android:text="@string/H2_Gepir"
   	            android:textColor="#FFFFFF"
   	            android:textSize="14sp" />

   	    </TableRow>
	        
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
       

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold" />

        
        </TableRow>
        
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
	
        </TableRow>	
        

	</LinearLayout>
</ScrollView>


